# Dungeon-Trouble

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  PR_TEMPLATE.md  README.md  commit_msg.txt  pr_description.md  pr_info.txt
DungeonDocs/: ADR-001-Diagnostics-Framework.md  ADR-0012-Job-System.md  ADR-002-Filesystem.md  ADR-003-Configuration-System.md  ADR-004-Platform-Abstraction.md  ADR-005-Window-Management.md  ADR-006-Input-System.md  Architecture.md  CODING_STANDARDS.md  CONTRIBUTING.md  CodingStandards.md  Contributing.md  DEFINITION_OF_DONE.md  DEPENDENCY_POLICY.md  DEVELOPMENT_WORKFLOW.md  DIAGNOSTICS.md  DOCUMENTATION_GUIDELINES.md  ENGINE_ARCHITECTURE.md  ENGINE_CONSTITUTION.md  EngineOverview.md  FolderStructure.md  GAME_DESIGN_BIBLE.md  PERFORMANCE_GUIDELINES.md  PHASE_G_STATE.md  PLATFORM.md  REFACTORING_POLICY.md  ROADMAP.md  Roadmap.md  SECURITY_GUIDELINES.md  STYLE_GUIDE.md  TDD_GAMEPLAY.md  TESTING_GUIDELINES.md  VERSIONING_POLICY.md
DungeonDocs/ADRs/: ADR-0011-Threading-System.md  ADR-0013-Runtime-Infrastructure.md
DungeonEngine/Configuration/: CMakeLists.txt
DungeonEngine/Configuration/src/: ConfigurationManager.cpp  Formatters.cpp  Providers.cpp
DungeonEngine/Core/: CMakeLists.txt
DungeonEngine/Core/docs/: Architecture.md  InitialDesign.md  PublicAPI.md  README.md  SelfReview.md
DungeonEngine/Core/src/: Application.cpp  Clock.cpp  Config.cpp  Engine.cpp  LayerStack.cpp  UUID.cpp
DungeonEngine/Diagnostics/: CMakeLists.txt
DungeonEngine/Diagnostics/src/: Assertion.cpp  DiagnosticsManager.cpp  Log.cpp  LogSink.cpp  Profiler.cpp  (+1 more)
DungeonEngine/ECS/: CMakeLists.txt
DungeonEngine/Events/: CMakeLists.txt
DungeonEngine/FileSystem/: CMakeLists.txt
DungeonEngine/Gameplay/: CMakeLists.txt
DungeonEngine/Gameplay/include/Gameplay/Abilities/: AbilityComponents.h  AbilityDef.h  AbilityDefTable.h  AbilityEvents.h  AbilitySystem.h  StatusEffectDef.h  StatusEffectDefTable.h  StatusEffectSystem.h
DungeonEngine/Gameplay/include/Gameplay/Combat/: CombatSystem.h  Components.h  DamagePipeline.h  Events.h  HitQuery.h
DungeonEngine/Gameplay/include/Gameplay/Items/: EquipSlot.h  Equipment.h  EquipmentOps.h  Inventory.h  ItemDef.h  ItemDefTable.h  ItemRarity.h  ItemStack.h
DungeonEngine/Gameplay/include/Gameplay/Loot/: Events.h  LootComponents.h  LootRoller.h  LootSystem.h  LootTableDefTable.h  LootTypes.h
DungeonEngine/Gameplay/include/Gameplay/Stats/: AttributeType.h  ModifierOp.h  StatCalculator.h  StatFormulas.h  StatModifier.h  StatSheet.h  StatType.h
DungeonEngine/Gameplay/src/Abilities/: AbilityDefTable.cpp  AbilitySystem.cpp  StatusEffectDefTable.cpp  StatusEffectSystem.cpp
DungeonEngine/Gameplay/src/Combat/: CombatSystem.cpp  DamagePipeline.cpp  HitQuery.cpp
DungeonEngine/Gameplay/src/Items/: EquipmentOps.cpp  Inventory.cpp  ItemDefTable.cpp
DungeonEngine/Gameplay/src/Loot/: LootRoller.cpp  LootSystem.cpp  LootTableDefTable.cpp
DungeonEngine/Gameplay/src/Stats/: StatCalculator.cpp
DungeonEngine/Input/: CMakeLists.txt
DungeonEngine/Jobs/: CMakeLists.txt
DungeonEngine/Math/: CMakeLists.txt
DungeonEngine/Math/include/Math/: Collision.h  Color.h  Geometry.h  Interpolation.h  MathUtils.h  Matrix.h  Matrix3.h  Matrix4.h  Noise.h  Quaternion.h  Random.h  Transform.h  Vector2.h  Vector3.h  Vector4.h
DungeonEngine/Math/src/: Collision.cpp  Color.cpp  MathModule.cpp  Noise.cpp  Random.cpp
DungeonEngine/Memory/: CMakeLists.txt
DungeonEngine/Memory/include/Memory/: ArenaAllocator.h  FreeListAllocator.h  IAllocator.h  LinearAllocator.h  MemoryCategory.h  MemoryManager.h  MemoryUtils.h  PoolAllocator.h  StackAllocator.h
DungeonEngine/Memory/src/: ArenaAllocator.cpp  FreeListAllocator.cpp  LinearAllocator.cpp  MemoryManager.cpp  MemoryUtils.cpp  PoolAllocator.cpp  StackAllocator.cpp
DungeonEngine/Platform/: CMakeLists.txt
DungeonEngine/Platform/include/Platform/: IClipboard.h  IDynamicLibrary.h  IEnvironment.h  IProcess.h  ISystemInfo.h  ITime.h  PlatformManager.h
DungeonEngine/Platform/src/: PlatformManager.cpp
DungeonEngine/Platform/src/Posix/: PlatformPosix.cpp  PlatformPosix.h
DungeonEngine/Platform/src/Windows/: PlatformWindows.cpp  PlatformWindows.h
DungeonEngine/Simulation/: CMakeLists.txt
DungeonEngine/Threading/: CMakeLists.txt
DungeonEngine/Window/: CMakeLists.txt
DungeonEngine/Window/include/Window/: IWindow.h  MonitorInfo.h  WindowEvents.h  WindowManager.h  WindowProperties.h
DungeonEngine/Window/src/: WindowImpl_Linux.cpp  WindowImpl_Linux.h  WindowImpl_Windows.cpp  WindowImpl_Windows.h  WindowImpl_macOS.cpp  WindowImpl_macOS.h  WindowManager.cpp
DungeonEngine/World/: CMakeLists.txt
Tests/Configuration/: CMakeLists.txt  ConfigurationTests.cpp
Tests/Core/: CMakeLists.txt  Test_Config.cpp  Test_Engine.cpp  Test_Result.cpp  Test_Timers.cpp  Test_UUID.cpp  main.cpp
Tests/Diagnostics/: CMakeLists.txt  TestAssertions.cpp  TestLogging.cpp  TestPerformanceCounters.cpp  TestProfiler.cpp
Tests/ECS/: CMakeLists.txt  ECSTests.cpp
Tests/Events/: CMakeLists.txt  EventsTests.cpp
Tests/FileSystem/: CMakeLists.txt
Tests/FileSystem/src/: Test_Directory.cpp  Test_File.cpp  Test_Path.cpp  Test_Stream.cpp  Test_VFS.cpp
Tests/Gameplay/: AbilitiesTests.cpp  CMakeLists.txt  CombatTests.cpp  GameplayTests.cpp  ItemsTests.cpp  LootTests.cpp
Tests/Input/: CMakeLists.txt  InputTests.cpp
Tests/Jobs/: CMakeLists.txt  JobSystemTests.cpp
Tests/Math/: CMakeLists.txt  CollisionTests.cpp  ColorTests.cpp  GeometryTests.cpp  InterpolationTests.cpp  MathModuleTests.cpp  MathUtilsTests.cpp  Matrix3Tests.cpp  Matrix4Tests.cpp  MatrixTests.cpp  NoiseTests.cpp  QuaternionTests.cpp  RandomTests.cpp  TransformTests.cpp  Vector3Tests.cpp  VectorTests.cpp
Tests/Memory/: CMakeLists.txt  MemoryTests.cpp
Tests/Platform/: CMakeLists.txt  PlatformTests.cpp
Tests/Simulation/: CMakeLists.txt  SimulationTests.cpp
Tests/Threading/: AtomicTests.cpp  CMakeLists.txt  SynchronizationTests.cpp  ThreadTests.cpp
Tests/Window/: CMakeLists.txt
Tests/Window/src/: WindowTests.cpp
Tests/World/: CMakeLists.txt  WorldTests.cpp
(+130 files in other folders)
