cmake_minimum_required(VERSION 3.16)
project(DungeonTrouble CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions")

add_subdirectory(DungeonEngine/Core)
add_subdirectory(DungeonEngine/Configuration)
add_subdirectory(DungeonEngine/Platform)
add_subdirectory(DungeonEngine/FileSystem)
add_subdirectory(DungeonEngine/Window)
add_subdirectory(Tests/FileSystem)
add_subdirectory(DungeonEngine/Diagnostics)
add_subdirectory(ThirdParty/catch2)
add_subdirectory(Tests/Core)
add_subdirectory(Tests/Configuration)
add_subdirectory(Tests/Platform)
add_subdirectory(Tests/Diagnostics)
add_subdirectory(DungeonEngine/Memory)
add_subdirectory(DungeonEngine/Math)
add_subdirectory(Tests/Memory)
add_subdirectory(Tests/Math)
add_subdirectory(Tests/Window)
